--- a/theme/default/css/default.css
+++ b/theme/default/css/default.css
@@ -12,15 +12,28 @@ a:hover {
 	text-decoration: underline;
 }
 
-#content {
+pre {
 	background: #fff;
+	margin: 0.25em;
+	padding: 0.25em;
+}
 
-	border-top: 1em solid #699169;
-
+#header,
+#content {
 	max-width: 800px;
 	width: 100%;
 
 	margin: 0 auto;
+}
+
+#header h1 {
+	font-style: italic;
+}
+
+#content {
+	background: #fff;
+
+	border-top: 1em solid #699169;
 
 	box-shadow: 0em 0.5em 1em rgba(0,0,0,0.25);
 }
