--- a/theme/default/css/default.css
+++ b/theme/default/css/default.css
@@ -1,6 +1,10 @@
 body {
 	background: #f5f2eb;
+	border: 0;
+	padding: 0;
+	margin: 2em 0 0 0;
 
+	font-family: sans-serif;
 }
 
 a {
@@ -18,27 +22,48 @@ pre {
 	padding: 0.25em;
 }
 
-#header,
-#content {
+.container {
 	max-width: 800px;
 	width: 100%;
 
-	margin: 0 auto;
-}
+	margin: 0 auto 0 auto;
 
-#header h1 {
-	font-style: italic;
+	box-shadow: 0em 0.5em 1em rgba(0,0,0,0.25);
 }
 
 #content {
 	background: #fff;
-
-	border-top: 1em solid #699169;
-
-	box-shadow: 0em 0.5em 1em rgba(0,0,0,0.25);
 }
 
 .content-inner {
 	padding: 1em;
 }
 
+ul.menu,
+ul.menu li {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+ul.menu {
+	background: #699169;
+}
+
+ul.menu li {
+	display: inline-block;
+
+	padding: 0 0.5em;
+	margin: 0.5em 0;
+
+	border-right: 1px solid #fff;
+}
+
+ul.menu li:last-child {
+	border-right: none;
+}
+
+
+ul.menu a {
+	color: #fff;
+}
