--- a/theme/default/css/default.css
+++ b/theme/default/css/default.css
@@ -27,7 +27,14 @@ pre {
 	width: 100%;
 
 	margin: 0 auto 0 auto;
+}
 
+#header h1 {
+	font-style: italic;
+}
+
+#main-menu,
+#content {
 	box-shadow: 0em 0.5em 1em rgba(0,0,0,0.25);
 }
 
