--- a/theme/thomen/css/default.css
+++ b/theme/thomen/css/default.css
@@ -29,6 +29,10 @@ pre {
 	margin: 0 auto 0 auto;
 }
 
+.header-inner {
+	padding: 0 1em;
+}
+
 #main-menu,
 #content {
 	box-shadow: 0em 0.5em 1em rgba(0,0,0,0.25);
