--- a/apps/css/sensors.css
+++ b/apps/css/sensors.css
@@ -1,7 +1,7 @@
 .datapoint-popup {
 	display: block;
 	position: absolute;
-	visibility: hidden;
+	opacity: 0;
 
 	background: #fff;
 	font-size: 9pt;
@@ -10,9 +10,18 @@
 	padding: 0.5em;
 
 	box-shadow: 2px 3px 3px rgba(0,0,0,0.25);
+
+	pointer-events: none;
+
+	transition: opacity .2s ease-in-out;
 }
 
 .datapoint-popup span {
 	display: block;
 	line-height: 1.5;
 }
+
+.datapoint-popup.visible {
+	opacity: 1;
+}
+
