Implement support for sensor aliases for the sensor applet

--- a/apps/sensors/css/sensors.css
+++ b/apps/sensors/css/sensors.css
@@ -34,6 +34,11 @@
 	height: 10px;
 }
 
+.sensor > * {
+	display: inline-block;
+	vertical-align: middle;
+}
+
 .sensor-index-1:before {
 	background: #abc;
 }
